--- a/MicroDock/Views/MainWindow.axaml
+++ b/MicroDock/Views/MainWindow.axaml
@@ -3,7 +3,8 @@ xmlns="https://github.com/avaloniaui"
 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-xmlns:vm="using:MicroDock.ViewModel"
+xmlns:vm="using:MicroDock.ViewModels"
+xmlns:views="using:MicroDock.Views"
 xmlns:fa="clr-namespace:FluentAvalonia.UI.Controls;assembly=FluentAvalonia"
 mc:Ignorable="d"
 d:DesignWidth="480"
@@ -14,111 +15,82 @@ MinWidth="480"
 MinHeight="360"
 x:Class="MicroDock.Views.MainWindow"
 x:DataType="vm:MainWindowViewModel"
-ExtendClientAreaToDecorationsHint="True"
-ExtendClientAreaChromeHints="NoChrome"
 CanResize="True"
+Title="MicroDock"
 Icon="/Assets/logo.ico">
 
-	<Window.Styles>
-		<!-- 关闭按钮样式 -->
-		<Style Selector="Button.CloseButton:pointerover">
-			<Setter Property="Background" Value="{DynamicResource ButtonBackgroundPointerOver}"/>
-		</Style>
-		<Style Selector="Button.CloseButton:pressed">
-			<Setter Property="Background" Value="{DynamicResource ButtonBackgroundPressed}"/>
-		</Style>
+	<!--<Window.Styles>
+	--><!-- 关闭按钮样式 --><!--
+	<Style Selector="Button.CloseButton:pointerover">
+	<Setter Property="Background" Value="{DynamicResource ButtonBackgroundPointerOver}"/>
+	</Style>
+	<Style Selector="Button.CloseButton:pressed">
+	<Setter Property="Background" Value="{DynamicResource ButtonBackgroundPressed}"/>
+	</Style>
 
-		<!-- NavigationViewItem 样式 -->
-		<Style Selector="fa|NavigationViewItem">
-			<Setter Property="Margin" Value="0,0"/>
-			<Setter Property="Padding" Value="0,8"/>
-			<Setter Property="MinHeight" Value="40"/>
-		</Style>
-		<!-- 选中状态样式 -->
-		<Style Selector="fa|NavigationViewItem:selected /template/ Border#LayoutRoot">
-			<Setter Property="Background" Value="{DynamicResource SystemAccentColorLight2}"/>
-		</Style>
+	--><!-- NavigationViewItem 样式 --><!--
+	<Style Selector="fa|NavigationViewItem">
+	<Setter Property="Margin" Value="0,0"/>
+	<Setter Property="Padding" Value="0,8"/>
+	<Setter Property="MinHeight" Value="40"/>
+	</Style>
+	--><!-- 选中状态样式 --><!--
+	<Style Selector="fa|NavigationViewItem:selected /template/ Border#LayoutRoot">
+	<Setter Property="Background" Value="{DynamicResource SystemAccentColorLight2}"/>
+	</Style>
 
-		<!-- 悬停状态样式 -->
-		<Style Selector="fa|NavigationViewItem:pointerover /template/ Border#LayoutRoot">
-			<Setter Property="Background" Value="{DynamicResource SystemAccentColorLight3}"/>
-		</Style>
+	--><!-- 悬停状态样式 --><!--
+	<Style Selector="fa|NavigationViewItem:pointerover /template/ Border#LayoutRoot">
+	<Setter Property="Background" Value="{DynamicResource SystemAccentColorLight3}"/>
+	</Style>
 
-	</Window.Styles>
+	</Window.Styles>-->
 
 	<Design.DataContext>
 		<vm:MainWindowViewModel />
 	</Design.DataContext>
 	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="30"/>
-			<!-- 自定义标题栏 -->
-			<RowDefinition Height="*"/>
-			<!-- 内容区域 -->
+		<!--		<Grid.RowDefinitions>
+		<RowDefinition Height="30"/>
+		--><!-- 自定义标题栏 --><!--
+		<RowDefinition Height="*"/>
+		--><!-- 内容区域 --><!--
 		</Grid.RowDefinitions>
 
-		<!-- 自定义标题栏 -->
+		--><!-- 自定义标题栏 --><!--
 		<Grid Grid.Row="0" Background="{DynamicResource SystemAccentColor}" PointerPressed="TitleBar_PointerPressed">
-			<TextBlock Text="MicroDock"
-					   VerticalAlignment="Center"
-					   Margin="10,0"
-					   Foreground="White"/>
+		<TextBlock Text="MicroDock"
+		VerticalAlignment="Center"
+		Margin="10,0"
+		Foreground="White"/>
 
-			<!-- 自定义关闭按钮 -->
-			<Button Content="✕"
-					Width="30"
-					Height="30"
-					Classes="CloseButton"
-					Padding="0"
-					VerticalContentAlignment="Center"
-					HorizontalContentAlignment="Center"
-					HorizontalAlignment="Right"
-					Background="Transparent"
-					Click="CloseButton_OnClick"/>
+		--><!-- 自定义关闭按钮 --><!--
+		<Button Content="✕"
+		Width="30"
+		Height="30"
+		Classes="CloseButton"
+		Padding="0"
+		VerticalContentAlignment="Center"
+		HorizontalContentAlignment="Center"
+		HorizontalAlignment="Right"
+		Background="Transparent"
+		Click="CloseButton_OnClick"/>
 		</Grid>
 
-		<!-- 内容区域 - NavigationView -->
-		<fa:NavigationView Grid.Row="1"
-						   x:Name="MainNav"
-						   OpenPaneLength="128"
-						   CompactPaneLength="48"
-						   CompactModeThresholdWidth="700"
-						   IsPaneToggleButtonVisible="True"
-						   IsBackButtonVisible="False"
-						   IsSettingsVisible="False"
-						   PaneDisplayMode="Left"
-						   Background="Transparent">
-
-			<!-- 主导航菜单项（动态添加在代码中） -->
-			<fa:NavigationView.MenuItems>
-				<!-- 菜单项将在MainWindow.axaml.cs中动态添加 -->
-			</fa:NavigationView.MenuItems>
-
-			<!-- 底部固定菜单（设置） -->
-			<!--		<fa:NavigationView.FooterMenuItems>
-			<fa:NavigationViewItem Content="设置" Tag="Settings">
-			<fa:NavigationViewItem.IconSource>
-			<fa:SymbolIconSource Symbol="Setting"/>
-			</fa:NavigationViewItem.IconSource>
-			</fa:NavigationViewItem>
-			</fa:NavigationView.FooterMenuItems>-->
-
-		<!-- 内容区域 -->
-		<fa:NavigationView.Content>
-			<ContentControl Padding="6,6" Content="{Binding CurrentView}"/>
-		</fa:NavigationView.Content>
-		</fa:NavigationView>
-
+		--><!-- 内容区域 --><!--
+		<ContentControl Grid.Row="1" Content="{Binding MainContent}" />-->
+		<!--<views:MainView x:DataType="vm:MainViewModel"/>-->
+		<ContentControl Content="{Binding MainContent}" />
 		<!-- 全屏Loading覆盖层 -->
 		<Border Grid.Row="0" Grid.RowSpan="2"
 				Background="#80000000"
 				IsVisible="{Binding IsLoading}"
 				ZIndex="1000">
-			<StackPanel VerticalAlignment="Center" 
+			<StackPanel VerticalAlignment="Center"
 						HorizontalAlignment="Center"
 						Spacing="16">
-				<fa:ProgressRing IsIndeterminate="True" 
-								 Width="60" 
+				<fa:ProgressRing IsIndeterminate="True"
+								 Width="60"
 								 Height="60"
 								 Foreground="White"/>
 				<TextBlock Text="{Binding LoadingMessage}"
@@ -131,3 +103,5 @@ Icon="/Assets/logo.ico">
 
 	</Grid>
 </Window>
+
+
